test/fail/generics/double_resolve_proof.lly
#[
SyntaxError: Function f, argument #3 is invalid:
Expected Type: list[A]
Received Type: list[list[integer]]
Where: File "double_resolve_proof.lly" at line 28
]#

define f[A, B](one: A, two: B, three: B) {  }

define g[A](one: A) {
    # Here's what's supposed to happen:
    # The first argument to f is processed as list[any].
    # f: A = list[any]
    # The second argument is list[A]
    # f: B = list[A]
    # The third argument is list[integer].

    # For the third argument, list build will attempt to resolve what B is and
    # find that B = list[A].
    # Correct:
    # [[1]], expect B.       B = list[list[A]]
    #  [1]   expect list[A]. However, the expected signature is resolved.

    # Incorrect:
    # [[1]], expect B.       B = list[list[A]]
    #  [1],  expect list[A]. A = any  (double resolve!)

    f([10.@(any)], [one], [[1]])
}
